# pkgutils

./: Cargo.toml  README.md  WINDOWS_BUILD.md
.github/workflows/: multi-platform-build.yml  windows-build.yml
pkg-cli/: Cargo.toml
pkg-cli/src/: main.rs
pkg-lib/: Cargo.toml
pkg-lib/src/: lib.rs  library.rs  recipes.rs  repo_manager.rs
pkg-lib/src/backend/: mod.rs
pkg-lib/src/net_backend/: reqwest_backend.rs
pkgar-core-stub/: Cargo.toml
pkgar-core-stub/src/: lib.rs
pkgar-keys-stub/: Cargo.toml
pkgar-keys-stub/src/: lib.rs
pkgar-stub/: Cargo.toml
pkgar-stub/src/: lib.rs
termion-stub/: Cargo.toml
termion-stub/src/: lib.rs
